--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-barcode-reader": "^0.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-webcam": "^7.2.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
@@ -59,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.8",
     "@types/uuid": "^9.0.3",
     "tailwindcss": "^3.3.3"
   }
