--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "start:prod": "serve build --single -p 4000",
+    "prod": "pm2 start ./server.js --name xnetshop",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
