--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=http://localhost:4000/api
-ABSOLUTE_STATIC_PATH=/
+PORT=3002
+ABSOLUTE_STATIC_PATH=/home/tarekda/projects/xnet/xnet-shop/build/static/
