--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "start:prod": "serve build --single -p 4000",
+    "start:prod": "serve build --single -p 4000 &",
     "prod": "pm2 start ./server.js --name xnetshop",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
